--- a/style.css
+++ b/style.css
@@ -4,3 +4,41 @@
     box-sizing: border-box;
     text-decoration: 0;
 }
+
+
+body {
+    font-family: 'Ubuntu', sans-serif;
+}
+
+
+
+/* header  */
+
+
+
+.header{
+    max-width: 1440px;
+    width: 100%;
+    margin: 0 auto;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 107px 20px 62px;
+}
+
+.nav{
+    display: flex;
+    gap: 30px;
+}
+
+.nav a{
+    color: #957554;
+    font-size: 24px;
+    font-weight: 500;
+    transition: .2s;
+}
+
+.nav a:hover{
+    color: #DFAA5B;
+}
