--- a/style.css
+++ b/style.css
@@ -10,21 +10,23 @@ body {
     font-family: 'Ubuntu', sans-serif;
 }
 
+.container{
+    max-width: 1440px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 20px 107px 20px 62px;
+}
 
 
 /* header  */
 
 
 
-.header{
-    max-width: 1440px;
-    width: 100%;
-    margin: 0 auto;
 
+.header{
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding: 20px 107px 20px 62px;
+    justify-content: space-between;  
 }
 
 .nav{
@@ -41,4 +43,57 @@ body {
 
 .nav a:hover{
     color: #DFAA5B;
+}
+
+
+
+
+/* intro  */
+
+.intro-section{
+    background: url(./assets/bg.png);
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+}
+
+.intro{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+    padding-top: 245px ;
+    padding-bottom: 245px;
+}
+
+
+.intro h1{
+    color: white;
+    font-size: 80px;
+    font-weight: 700;
+}
+
+
+.intro p{
+    font-size: 24px;
+    font-weight: 500;
+    color: white;
+}
+
+
+.intro a{
+    font-size: 24px;
+    font-weight: 500;
+    color: white;
+    padding: 25px 133px;
+    background-color: #DFAA5B;
+    border-radius: 10px;
+    transition: .2s;
+}
+
+
+.intro a:hover{
+    color: #DFAA5B;
+    background-color: white;
+    box-shadow: 0 0 10px black;
 }
